--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<script id="ch0103/01" >
+<!-- <script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -132,7 +132,6 @@
   var a = Math.sqrt((ax - bx) * (ax - bx) + (ay - by) * (ay - by))
   var b = Math.sqrt((bx - cx) * (bx - cx) + (by - cy) * (by - cy))
   var c = Math.sqrt((ax - cx) * (ax - cx) + (ay - cy) * (ay - cy))
-  console.log(a, b, c)
   var p = (a + b + c) / 2
   var S = Math.sqrt(p * (p - a) * (p - b) * (p - c))
   console.log(S.toFixed(2))
@@ -151,10 +150,10 @@
   var b = Number(prompt("b"))
   var res = a * b
   console.log(res)
-</script>
+</script> -->
 
 <script id="ch0103/20">
   var n = Number(prompt("n"))
-  var res = math.pow(2, n)
+  var res = Math.pow(2, n)
   console.log(res)
 </script>
