--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<!-- <script id="ch0103/01" >
+<script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -150,10 +150,54 @@
   var b = Number(prompt("b"))
   var res = a * b
   console.log(res)
-</script> -->
+</script>
 
 <script id="ch0103/20">
   var n = Number(prompt("n"))
   var res = Math.pow(2, n)
   console.log(res)
+</script>
+
+<script id="ch0104/01">
+  var n =Number(prompt("n"))
+  if (n === 0 ) {
+    console.log("zero")
+  } 
+  else if ( n > 0) {
+    console.log("positive")
+  }
+  else {
+    console.log("negative")
+  }
+</script>
+
+<script id="ch0104/02">
+  var n = Number(prompt("n"))
+  if (n < 0) {
+    console.log(-n)
+  }
+  else {
+    console.log(n)
+  }
+</script>
+
+<script id="ch0104/03">
+  var n = Number(prompt("n"))
+  if (n % 2) {
+    console.log("odd")
+  }
+  else {
+    console.log("even")
+  }
+</script>
+
+<script id="ch0104/04">
+  var n = String(prompt("n"))
+  var res = n.charCodeAt()
+  if (res % 2) {
+    console.log("YES")
+  }
+  else {
+    console.log("NO")
+  }
 </script>
