--- a/miao/noi.html
+++ b/miao/noi.html
@@ -201,3 +201,87 @@
     console.log("NO")
   }
 </script>
+
+<script id="ch0104/05">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  if (a === b) {
+    console.log("=")
+  }
+  else if (a > b) {
+    console.log(">")
+  }
+  else {
+    console.log("<")
+  }
+</script>
+
+<script id="ch0104/06">
+  var a = Number(prompt("a"))
+  if (a / 10 >= 1 && a / 10 < 10) {
+    console.log(1)
+  }
+  else {
+    console.log(0)
+  }
+</script>
+
+<script id="ch0104/07">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  if (a >= 10 || b >= 20) {
+    console.log(1)
+  }
+  else {
+    console.log(0)
+  }
+</script>
+
+<script id="ch0104/08">
+  var n = Number(prompt("n"))
+  if (n % 3 ==0 && n % 5 ==0 )
+  {
+    console.log("YES")
+  }
+  else {
+    console.log("NO")
+  }
+</script>
+
+<script id="ch0104/09">
+  var n = Number(prompt("n"))
+  var a = 0, b = 0, c = 0
+  if (n % 3 == 0) {
+    a = 1
+  }
+  if (n % 5 == 0) {
+    b = 1
+  }
+  if (n % 7 == 0) {
+    c = 1
+  }
+  if (a * b * c ==1) {
+    console.log("3"+" "+"5"+" "+"7")
+  }
+  if (a * b ==1 && c==0) {
+    console.log("3" + " " + "5")
+  }
+  if (a * c==1 && b==0) {
+    console.log("3"+" "+"7")
+  }
+  if (b * c == 1 && a == 0) {
+    console.log("5" + " " + "7")
+  }
+  if (a == 1 && b == 0 && c == 0) {
+    console.log("3")
+  }
+  if (a == 0 && b == 1 && c == 0) {
+    console.log("5")
+  }
+  if (a == 0 && b == 0 && c == 1) {
+    console.log("7")
+  }
+  if (a == 0 && b == 0 && c == 0) {
+    console.log("n")
+  }
+</script>
