--- a/miao/noi.html
+++ b/miao/noi.html
@@ -285,3 +285,22 @@
     console.log("n")
   }
 </script>
+
+<script id="ch0104/10">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var count=0
+  if (a < 60) {
+    count++
+  }
+  if (b < 60) {
+    count++
+  }
+  if (count ===1) {
+    console.log("1")
+  }
+  else {
+    console.log("0")
+  }
+</script>
+
