--- a/miao/noi.html
+++ b/miao/noi.html
@@ -384,9 +384,9 @@
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
   if (a + b > c && a + c > b && b + c > a ) {
-    console.log("YES")
+    console.log("yes")
   }
   else {
-    console.log("NO")
+    console.log("no")
   }
 </script>
