--- a/miao/noi.html
+++ b/miao/noi.html
@@ -436,3 +436,22 @@
   }
   console.log(res)
 </script>
+
+<script id="ch0104/20">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var c = Number(prompt("c"))
+  var x = 0, y = 0  
+  var delta = b * b - 4 * a * c
+  if (delta == 0) {
+    
+  } 
+</script>
+
+<script id="ch0104/21">
+  var n = Number(prompt("n"))
+  var x = Number(prompt("x"))
+  var y = Number(prompt("y"))
+  var res = n - Math.ceil(y/x)
+  console.log(res)
+</script>
