--- a/miao/noi.html
+++ b/miao/noi.html
@@ -469,3 +469,14 @@
   var res = n - Math.ceil(y/x)
   console.log(res)
 </script>
+
+<script id="ch0105/01">
+  var i, sum = 0, res
+  var n = Number(prompt("n"))
+  for (i = 1; i <= n; i++) {
+    var x = Number(prompt("x"))
+    sum += x 
+  }
+  res = sum / n
+  console.log(res.toFixed(2))
+</script>
