--- a/miao/noi.html
+++ b/miao/noi.html
@@ -480,3 +480,24 @@
   res = sum / n
   console.log(res.toFixed(2))
 </script>
+
+<script id="ch0105/02">
+  var i, sum ,res
+  for (i = 1, sum = 0; i <= 12 ; i++) {
+    var x =Number(prompt("x"))
+    sum += x
+  }
+  res = sum / 12
+  console.log("$" + res.toFixed(2))
+</script>
+
+<script id="ch0105/03">
+  var n = Number(prompt("n"))
+  var sum = 0;
+  for (var i = 1; i <= n; i++) {
+    var x = Number(prompt("x"))
+    sum += x
+  }
+  var res = sum / n
+  console.log(res.toFixed(4))
+</script>
