--- a/miao/noi.html
+++ b/miao/noi.html
@@ -501,3 +501,24 @@
   var res = sum / n
   console.log(res.toFixed(4))
 </script>
+
+<script id="ch0105/04">
+  var n = Number(prompt("n"))
+  var sum = 0, res = 0
+  for (var i = 0; i < 4; i++) {
+    var x = Number(prompt("x"))
+    sum = sum + x 
+  }
+  res = sum / n
+  console.log(sum, res.toFixed(5))
+</script>
+
+<script id="ch0105/05">
+  var n = Number(prompt("n"))
+  var max = 0
+  for (var i =0; i < n; i++ ) {
+    var x =Number(prompt("x"))
+    if(x > max) max = x
+  }
+  console.log(max)
+</script>
