--- a/miao/noi.html
+++ b/miao/noi.html
@@ -870,6 +870,6 @@
     }
   }
   for (var i =1; i <= n; i++) {
-    if(arr[i] == 0) console.log(i)
+    if(arr[i] == 0) console.log(i+",")
   }
 </script>
