--- a/miao/noi.html
+++ b/miao/noi.html
@@ -892,5 +892,47 @@
 </script>
 
 <script id="ch0105/33">
-  
-</script>
+  var n = Number(prompt("n"))
+  var res = 0
+  for (var i = 1; i <= n; i++) {
+    if (i % 2) {
+      res = res + 1 / i
+    }
+    else {
+      res = res - 1 / i
+    }
+  }
+  console.log(res.toFixed(4))
+ </script>
+
+ <script id="ch0105/34">
+  var n = Number(prompt("n"))
+  var sum = 0
+  var res = 1
+  for (var i = 1; i <= n; i++ ) {
+    res = res * i
+    sum = sum + res 
+  }
+  console.log(sum)
+ </script>
+
+ <script id="ch0105/35">
+  var n = Number(prompt("n"))
+  var sum = 1
+  var res = 1
+  for (var i =1 ; i <= n; i++) {
+    res= res * i
+    sum = sum + 1 / res
+  }
+  console.log(sum.toFixed(10))
+ </script>
+
+ <script id="ch0105/36">
+  var x = Number(prompt("x"))
+  var n = Number(prompt("n"))
+  var sum = 0
+  for (var i = n; i >= 0; i--) {
+    sum = sum + Math.pow(x,i)
+  }
+  console.log(sum.toFixed(2))
+ </script>
