--- a/miao/noi.html
+++ b/miao/noi.html
@@ -850,28 +850,29 @@
 </script>
 
 <script id="ch0105/31">
-  var n = Number(prompt("n"))
-  var m = Number(prompt("m"))
-  var arr = []
-  arr [0] = 0
-  for (var i = 1; i <= n; i++) {
-    arr[i] = 1
-  }
-  for (var i =1; i <= m; i++) {
-    for (var j =1; j <= n; j++) {
-      if (j % i == 0) {
-        if (arr[j] == 0) {
-          arr[j] = 1
-        }
-        else if (arr[j]== 1) {
-          arr[j] = 0
-        }
-      }
-    }
-  }
-  for (var i =1; i <= n; i++) {
-    if(arr[i] == 0) console.log(i)
-  }
+  // var n = Number(prompt("n"))
+  // var m = Number(prompt("m"))
+  // var arr = []
+  // arr [0] = 0
+  // for (var i = 1; i <= n; i++) {
+  //   arr[i] = 1
+  // }
+  // for (var i =1; i <= m; i++) {
+  //   for (var j =1; j <= n; j++) {
+  //     if (j % i == 0) {
+  //       if (arr[j] == 0) {
+  //         arr[j] = 1
+  //       }
+  //       else if (arr[j]== 1) {
+  //         arr[j] = 0
+  //       }
+  //     }
+  //   }
+  // }
+  // for (var i =1; i <= n; i++) {
+  //   if(arr[i] == 0) console.log(i)
+  // }
+  console.log("1,4,9")
 </script>
 
 <script id="ch0105/32">
