--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<script id="ch0103/01" >
+<!-- <script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -1095,4 +1095,30 @@
   console.log(arr[0] * 49 + arr[1] * 7 + arr[2])
   console.log("" + arr[0] + arr[1] + arr[2])
   console.log("" + arr[2] + arr[1] + arr[0])
+</script> -->
+
+<script id="ch0105/42">
+  var h = Number(prompt("h"))
+  var w = Number(prompt("w"))
+  var c = String(prompt("char"))
+  var s = Number(prompt("staic"))
+  var i, j, s, n
+  if (s == 0) {
+    for (i = 1; i <= h; i++) {
+      for (j = 1, s="", n = w - 2; j<= w; j++) {
+        if (i==1||i==7) {
+          s = s + c
+        }
+        else {
+          s = s + c 
+          while(n != 0) {
+          s = s +" "
+          n--
+          }
+          s = s + c 
+        }
+      }
+      console.log(s)
+    }
+  }
 </script>
