--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<!-- <script id="ch0103/01" >
+<script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -1095,7 +1095,7 @@
   console.log(arr[0] * 49 + arr[1] * 7 + arr[2])
   console.log("" + arr[0] + arr[1] + arr[2])
   console.log("" + arr[2] + arr[1] + arr[0])
-</script> -->
+</script>
 
 <script id="ch0105/42">
   var h = Number(prompt("h"))
