--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<script id="ch0103/01" >
+<script id="ch0103/01">
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -8,24 +8,9 @@
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
-  console.log(( a + b) * c)
+  console.log((a + b) * c)
 </script>
 
-<script id="ch0103/03">
-  var a = Number(prompt("a"))
-  var b = Number(prompt("b"))
-  var c = Number(prompt("c"))
-  var res = (a + b) / c
-  console.log(parseInt(res))
-</script>
-
-<script id="ch0103/04">
-  var a = Number(prompt("a"))
-  var b = Number(prompt("b"))
-  var y = a % b
-  var x = (a- y) /b
-  console.log(x,y)
-</script>
 
 <script id="ch0103/05">
   var a = Number(prompt("a"))
@@ -43,7 +28,7 @@
 
 <script id="ch0103/07">
   var x = Number(prompt("x"))
-  var a = Number(prompt("a"))  
+  var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
   var d = Number(prompt("d"))
@@ -93,7 +78,7 @@
   var a = Number(prompt("a"))
   var x = parseInt(a / 100)
   var z = a % 10
-  var y = (a - z - x * 100) /10
+  var y = (a - z - x * 100) / 10
   console.log(String(z) + y + x)
 </script>
 
@@ -118,7 +103,7 @@
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
   var d = Number(prompt("d"))
-  var res = Math.sqrt(Math.pow((a - c), 2) + Math.pow((b - d),2))
+  var res = Math.sqrt(Math.pow((a - c), 2) + Math.pow((b - d), 2))
   console.log(res.toFixed(3))
 </script>
 
@@ -142,7 +127,7 @@
   var b = Number(prompt("b"))
   var n = Number(prompt("n"))
   var res = a + (b - a) * (n - 1)
-  console.log(res) 
+  console.log(res)
 </script>
 
 <script id="ch0103/19">
@@ -159,11 +144,11 @@
 </script>
 
 <script id="ch0104/01">
-  var n =Number(prompt("n"))
-  if (n === 0 ) {
+  var n = Number(prompt("n"))
+  if (n === 0) {
     console.log("zero")
-  } 
-  else if ( n > 0) {
+  }
+  else if (n > 0) {
     console.log("positive")
   }
   else {
@@ -239,8 +224,7 @@
 
 <script id="ch0104/08">
   var n = Number(prompt("n"))
-  if (n % 3 ==0 && n % 5 ==0 )
-  {
+  if (n % 3 == 0 && n % 5 == 0) {
     console.log("YES")
   }
   else {
@@ -260,14 +244,14 @@
   if (n % 7 == 0) {
     c = 1
   }
-  if (a * b * c ==1) {
-    console.log("3"+" "+"5"+" "+"7")
+  if (a * b * c == 1) {
+    console.log("3" + " " + "5" + " " + "7")
   }
-  if (a * b ==1 && c==0) {
+  if (a * b == 1 && c == 0) {
     console.log("3" + " " + "5")
   }
-  if (a * c==1 && b==0) {
-    console.log("3"+" "+"7")
+  if (a * c == 1 && b == 0) {
+    console.log("3" + " " + "7")
   }
   if (b * c == 1 && a == 0) {
     console.log("5" + " " + "7")
@@ -289,14 +273,14 @@
 <script id="ch0104/10">
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
-  var count=0
+  var count = 0
   if (a < 60) {
     count++
   }
   if (b < 60) {
     count++
   }
-  if (count ===1) {
+  if (count === 1) {
     console.log("1")
   }
   else {
@@ -328,13 +312,13 @@
 
 <script id="ch0104/13">
   var n = Number(prompt("n"))
-  if ( n >= 0 && n <5) {
+  if (n >= 0 && n < 5) {
     res = -n + 2.5
   }
-  else if ( n >= 5 && n <10) {
-    res = 2 - 1.5 * (n-3) * (n-3)
+  else if (n >= 5 && n < 10) {
+    res = 2 - 1.5 * (n - 3) * (n - 3)
   }
-  else if ( n >= 10 && n < 20) {
+  else if (n >= 10 && n < 20) {
     res = n / 2 - 1.5
   }
   console.log(res.toFixed(3))
@@ -348,10 +332,10 @@
     res = 8;
   }
   if (n > 1000) {
-    res = 8 + 4 * Math.ceil((n-1000) / 500)
+    res = 8 + 4 * Math.ceil((n - 1000) / 500)
   }
-  if (m=="y") {
-    res = res + 5 
+  if (m == "y") {
+    res = res + 5
   }
   console.log(res)
 </script>
@@ -365,7 +349,7 @@
       max = a
     }
     else {
-      max =c
+      max = c
     }
   }
   else {
@@ -383,7 +367,7 @@
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
-  if (a + b > c && a + c > b && b + c > a ) {
+  if (a + b > c && a + c > b && b + c > a) {
     console.log("yes")
   }
   else {
@@ -393,8 +377,7 @@
 
 <script id="ch0104/17">
   var year = Number(prompt("year"))
-  if (year % 4 == 0 && year % 100 != 0 || year % 400 == 0)
-  {
+  if (year % 4 == 0 && year % 100 != 0 || year % 400 == 0) {
     console.log("Y")
   }
   else {
@@ -405,8 +388,7 @@
 <script id="ch0104/18">
   var x = Number(prompt("x"))
   var y = Number(prompt("y"))
-  if ((x <= 1 && x >= -1) && (y >= -1 && y <= 1))
-  {
+  if ((x <= 1 && x >= -1) && (y >= -1 && y <= 1)) {
     console.log("yes")
   }
   else {
@@ -427,11 +409,11 @@
   }
   if (o === "*") {
     res = parseInt(a * b)
-    }
+  }
   if (o === "/") {
     res = parseInt(a / b)
   }
-  if (o != "+" && o != "-" && o != "*" && o != "/" ) {
+  if (o != "+" && o != "-" && o != "*" && o != "/") {
     res = "Invalid operator!"
   }
   console.log(res)
@@ -447,18 +429,18 @@
     x = -b / 2 / a
     y = x
     console.log("x1=x2" + x)
-  } 
+  }
   else if (delta > 0) {
     x = (-b + Math.sqrt(delta)) / 2 / a
-    y = (-b - Math.sqrt(delta)) / 2 / a  
-    console.log("x1="+ x + ";x2=" + y)
-  } 
+    y = (-b - Math.sqrt(delta)) / 2 / a
+    console.log("x1=" + x + ";x2=" + y)
+  }
   else {
     x = -b / 2 / a
     x = x.toFixed(5)
-    y =  Math.sqrt(-delta) / 2 / a
-    y = y.toFixed(5) 
-    console.log("x1=" + x + "+" + y +"i;x2=" + x + "-" + y +"i")
+    y = Math.sqrt(-delta) / 2 / a
+    y = y.toFixed(5)
+    console.log("x1=" + x + "+" + y + "i;x2=" + x + "-" + y + "i")
   }
 </script>
 
@@ -466,7 +448,7 @@
   var n = Number(prompt("n"))
   var x = Number(prompt("x"))
   var y = Number(prompt("y"))
-  var res = n - Math.ceil(y/x)
+  var res = n - Math.ceil(y / x)
   console.log(res)
 </script>
 
@@ -475,16 +457,16 @@
   var n = Number(prompt("n"))
   for (i = 1; i <= n; i++) {
     var x = Number(prompt("x"))
-    sum += x 
+    sum += x
   }
   res = sum / n
   console.log(res.toFixed(2))
 </script>
 
 <script id="ch0105/02">
-  var i, sum ,res
-  for (i = 1, sum = 0; i <= 12 ; i++) {
-    var x =Number(prompt("x"))
+  var i, sum, res
+  for (i = 1, sum = 0; i <= 12; i++) {
+    var x = Number(prompt("x"))
     sum += x
   }
   res = sum / 12
@@ -507,7 +489,7 @@
   var sum = 0, res = 0
   for (var i = 0; i < 4; i++) {
     var x = Number(prompt("x"))
-    sum = sum + x 
+    sum = sum + x
   }
   res = sum / n
   console.log(sum, res.toFixed(5))
@@ -516,9 +498,9 @@
 <script id="ch0105/05">
   var n = Number(prompt("n"))
   var max = 0
-  for (var i =0; i < n; i++ ) {
-    var x =Number(prompt("x"))
-    if(x > max) max = x
+  for (var i = 0; i < n; i++) {
+    var x = Number(prompt("x"))
+    if (x > max) max = x
   }
   console.log(max)
 </script>
@@ -526,14 +508,13 @@
 <script id="ch0105/06">
   var n = Number(prompt("n"))
   var max = -1, min = 2000
-  for (var i = 0; i < n; i++)
-  {
+  for (var i = 0; i < n; i++) {
     var x = Number(prompt("x"))
     if (x > max) max = x
-    if (x < min) min = x  
+    if (x < min) min = x
   }
   var res = max - min
-  console.log(res) 
+  console.log(res)
 </script>
 
 <script id="ch0105/07">
@@ -554,7 +535,7 @@
 <script id="ch0105/08">
   var n = Number(prompt("n"))
   var res = (n - 2) * 180
-  for (var i = 1; i <= n-1; i++) {
+  for (var i = 1; i <= n - 1; i++) {
     var x = Number(prompt("x"))
     res = res - x
   }
@@ -566,13 +547,13 @@
   var n = Number(prompt("n"))
   var sum = 0, i
   if (m % 2) {
-      i = m
-    }
-    else {
-      i = m + 1
-    }
+    i = m
+  }
+  else {
+    i = m + 1
+  }
   for (; i <= n; i = i + 2) {
-    sum = sum + i 
+    sum = sum + i
   }
   console.log(sum)
 </script>
@@ -591,7 +572,7 @@
 
 <script id="ch0105/11">
   var n = Number(prompt("n"))
-  var x = 0 ,y = 0, z = 0
+  var x = 0, y = 0, z = 0
   for (var i = 0; i < n; i++) {
     var a = Number(prompt("a"))
     if (a == 1) x++
@@ -604,7 +585,7 @@
 <script id="ch0105/12">
   var n = Number(prompt("n"))
   var m = Number(prompt("m"))
-  var res = 0 
+  var res = 0
   for (var i = 0; i < n; i++) {
     var x = Number(prompt("x"))
     if (x == m) res++
@@ -612,10 +593,10 @@
   console.log(res)
 </script>
 
-<script id ="ch0105/13">
+<script id="ch0105/13">
   var n = Number(prompt("n"))
   var m = Number(prompt("m"))
-  var res = 1  
+  var res = 1
   for (var i = 0; i < m; i++) {
     res = res * n
   }
@@ -631,7 +612,7 @@
   console.log(x.toFixed(4))
 </script>
 
-<script id="ch0105/15"> 
+<script id="ch0105/15">
   var r = Number(prompt("r"))
   var m = Number(prompt("m"))
   var y = Number(prompt("y"))
@@ -647,13 +628,13 @@
   var house = 200
   var sum = n
   var count = 1
-  while(sum < house && count <= 20) {
+  while (sum < house && count <= 20) {
     house = house * 1.1
     sum = sum + n
     count++
   }
-  if (count <= 20)  console.log(count)
-  else              console.log("Impossible")
+  if (count <= 20) console.log(count)
+  else console.log("Impossible")
 
 </script>
 
@@ -662,10 +643,10 @@
   let arr = []
   arr[0] = 1
   arr[1] = 1
-  for (var i = 2; i < n; i++ ) {
+  for (var i = 2; i < n; i++) {
     arr[i] = arr[i - 1] + arr[i - 2]
   }
-  console.log(arr[n-1])
+  console.log(arr[n - 1])
 </script>
 
 <script id="ch0105/18">
@@ -691,7 +672,7 @@
 
 <script id="ch0105/19">
   var n = Number(prompt("n"))
-  var res = 0 
+  var res = 0
   for (var i = 0; i < n; i++) {
     var x = Number(prompt("x"))
     var y = Number(prompt("y"))
@@ -702,33 +683,32 @@
 </script>
 
 <script id="ch0105/20">
-  var height = Number(prompt("height")) 
+  var height = Number(prompt("height"))
   var sum = height
   var res = height
-  for (var i = 1; i <= 10; i++ )
-  { 
-    res = res / 2 
+  for (var i = 1; i <= 10; i++) {
+    res = res / 2
   }
-  for (var i = 2 ; i <= 10; i++) {
+  for (var i = 2; i <= 10; i++) {
     height = height / 2
-    sum = sum + height * 2  
+    sum = sum + height * 2
   }
-  console.log(sum.toFixed(4) ,res.toFixed(7))
+  console.log(sum.toFixed(4), res.toFixed(7))
 </script>
 
 <script id="ch0105/21">
   var n = Number(prompt("n"))
   var res = 0
   while (n != 1) {
-    if(n%2) {
+    if (n % 2) {
       res = n
       n = n * 3 + 1
-      console.log(res+"*3+1="+n)
+      console.log(res + "*3+1=" + n)
     }
-    if(n % 2 == 0) {
+    if (n % 2 == 0) {
       res = n
       n = n / 2
-      console.log(res+"/2="+n)
+      console.log(res + "/2=" + n)
     }
   }
   console.log("End")
@@ -738,12 +718,12 @@
   var sum = Number(prompt("sum"))
   var n = Number(prompt("n"))
   var res = n
-  for (var i = 0; i < n; i++ ) {
-     var x = Number(prompt("x"))
-     if (sum - x >= 0) {
-       sum = sum - x
-       res-- 
-     }
+  for (var i = 0; i < n; i++) {
+    var x = Number(prompt("x"))
+    if (sum - x >= 0) {
+      sum = sum - x
+      res--
+    }
   }
   console.log(res)
 </script>
@@ -755,7 +735,7 @@
   for (var i = 0; i < n; i++) {
     var x = Number(prompt("x"))
     var y = Number(prompt("y"))
-    if ( x >= 90 && x <= 140 && y >= 60 && y <= 90) {
+    if (x >= 90 && x <= 140 && y >= 60 && y <= 90) {
       res++
     }
     else {
@@ -771,12 +751,12 @@
   var res = 0
   for (var i = 0; i < n; i++) {
     var num = Number(prompt("num"))
-    var a = num % 10 
+    var a = num % 10
     num = (num - a) / 10
     var b = num % 10
     num = (num - b) / 10
     var c = num % 10
-    var d = (num - c) / 10 
+    var d = (num - c) / 10
     if (a - d - c - b > 0) res++
   }
   console.log(res)
@@ -795,7 +775,7 @@
 
 <script id="ch0105/28">
   var num = Number(prompt("num"))
-  while(parseInt(num) != 0 ) {
+  while (parseInt(num) != 0) {
     console.log(num % 10)
     num = parseInt(num / 10)
   }
@@ -812,11 +792,11 @@
   var res
   while (parseInt(num) != 0) {
     res = num % 10
-    sum = sum * 10 + res 
-    num = parseInt(num / 10) 
+    sum = sum * 10 + res
+    num = parseInt(num / 10)
   }
   if (flag == 0) {
-    sum = -sum 
+    sum = -sum
   }
   console.log(sum)
 </script>
@@ -828,8 +808,8 @@
   var res = 0
   if (num % 19 == 0) {
     while (num != 0) {
-      res = num % 10 
-      if(res == 3) {
+      res = num % 10
+      if (res == 3) {
         count++
       }
       num = parseInt(num / 10)
@@ -875,11 +855,11 @@
   arrp[1] = 1
   for (var i = 2; i <= n; i++) {
     arrq[i] = arrq[i - 1] + arrp[i - 1]
-    arrp[i] = arrq[i-1]
+    arrp[i] = arrq[i - 1]
   }
-  var sum = 0 
-  for (var i = 1; i <= n; i++ ) {
-    sum =sum + arrq[i] / arrp[i]
+  var sum = 0
+  for (var i = 1; i <= n; i++) {
+    sum = sum + arrq[i] / arrp[i]
   }
   console.log(sum.toFixed(4))
 </script>
@@ -896,15 +876,15 @@
     }
   }
   console.log(res.toFixed(4))
- </script>
+</script>
 
 <script id="ch0105/34">
   var n = Number(prompt("n"))
   var sum = 0
   var res = 1
-  for (var i = 1; i <= n; i++ ) {
+  for (var i = 1; i <= n; i++) {
     res = res * i
-    sum = sum + res 
+    sum = sum + res
   }
   console.log(sum)
 </script>
@@ -913,8 +893,8 @@
   var n = Number(prompt("n"))
   var sum = 1
   var res = 1
-  for (var i =1 ; i <= n; i++) {
-    res= res * i
+  for (var i = 1; i <= n; i++) {
+    res = res * i
     sum = sum + 1 / res
   }
   console.log(sum.toFixed(10))
@@ -925,7 +905,7 @@
   var n = Number(prompt("n"))
   var sum = 0
   for (var i = n; i >= 0; i--) {
-    sum = sum + Math.pow(x,i)
+    sum = sum + Math.pow(x, i)
   }
   console.log(sum.toFixed(2))
 </script>
@@ -941,7 +921,7 @@
 </script>
 <script id="ch0105/38">
   var N = Number(prompt("N"))
-  while(N--) {
+  while (N--) {
     var n = Number(prompt("n"))
     var arr = []
     for (var i = 0; i <= 100; i++) {
@@ -955,9 +935,9 @@
     }
     else {
       for (var j = n; j > 0; j--) {
-        arr[j] = arr[j] * j 
+        arr[j] = arr[j] * j
         console.log(arr[j])
-       }
+      }
     }
   }
 </script>
@@ -968,9 +948,8 @@
   for (var i = 0; i <= n; i++) {
     var a = i % 10
     var b = parseInt(i / 10) % 10
-    if(i % 7 && a != 7 && b != 7 )
-    {
-      sum = sum + i*i
+    if (i % 7 && a != 7 && b != 7) {
+      sum = sum + i * i
     }
   }
   console.log(sum)
@@ -981,7 +960,7 @@
   var res = 0
   for (var i = 1; i <= n; i++) {
     var x = i
-    while(x != 0) {
+    while (x != 0) {
       if (x % 10 == 1) {
         res++
       }
@@ -1010,8 +989,8 @@
 <script id="ch0105/43">
   var n = Number(prompt("n"))
   var res
-  for (var i = n-1 ; i >=  2; i--) {
-    if( n % i == 0) {
+  for (var i = n - 1; i >= 2; i--) {
+    if (n % i == 0) {
       res = i
       break
     }
@@ -1020,11 +999,11 @@
 </script>
 
 <script id="ch0105/44">
-  var N = Number (prompt("N"))
-  var arr = [] 
+  var N = Number(prompt("N"))
+  var arr = []
   for (var n = 2; n < 10000; n++) {
     var flag = 1
-    for(var i = 2; i * i <= n; i++) {
+    for (var i = 2; i * i <= n; i++) {
       if (n % i == 0) {
         flag = 0
         break
@@ -1034,7 +1013,7 @@
       arr.push(n)
     }
   }
-  console.log(arr[N-1])
+  console.log(arr[N - 1])
 </script>
 
 <script id="ch0105/45">
@@ -1044,7 +1023,7 @@
   var cnt = 1
   for (var i = 1; i <= days; i++) {
     var res = i
-    while(res--) {
+    while (res--) {
       arr.push(cnt)
     }
     cnt++
@@ -1071,19 +1050,19 @@
     }
   }
   if (i == 13) {
-      console.log(sum * 1.2 + res)
-    }
-    else {
-      console.log(-i)
-    }
+    console.log(sum * 1.2 + res)
+  }
+  else {
+    console.log(-i)
+  }
 </script>
 
 <script id="ch0105/25">
   var arr = []
-  for(var a = 0; a < 7; a++) {
-    for(var b = 0; b < 7; b++) {
+  for (var a = 0; a < 7; a++) {
+    for (var b = 0; b < 7; b++) {
       for (var c = 0; c < 7; c++) {
-        if(a * 49 + b * 7 + c * 1 == a * 1 + b * 9 + c * 81) {
+        if (a * 49 + b * 7 + c * 1 == a * 1 + b * 9 + c * 81) {
           arr[0] = a
           arr[1] = b
           arr[2] = c
@@ -1098,27 +1077,5 @@
 </script>
 
 <script id="ch0105/42">
-  var h = Number(prompt("h"))
-  var w = Number(prompt("w"))
-  var c = String(prompt("char"))
-  var s = Number(prompt("staic"))
-  var i, j, s, n
-  if (s == 0) {
-    for (i = 1; i <= h; i++) {
-      for (j = 1, s="", n = w - 2; j<= w; j++) {
-        if (i==1||i==7) {
-          s = s + c
-        }
-        else {
-          s = s + c 
-          while(n != 0) {
-          s = s +" "
-          n--
-          }
-          s = s + c 
-        }
-      }
-      console.log(s)
-    }
-  }
+
 </script>
