--- a/miao/noi.html
+++ b/miao/noi.html
@@ -11,6 +11,21 @@
   console.log((a + b) * c)
 </script>
 
+<script id="ch0103/03">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var c = Number(prompt("c"))
+  var res = (a + b) / c
+  console.log(parseInt(res))
+</script>
+
+<script id="ch0103/04">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var x = a % b
+  var y = (a - x) / b  
+  console.log(y, x)
+</script>
 
 <script id="ch0103/05">
   var a = Number(prompt("a"))
