--- a/miao/paint.html
+++ b/miao/paint.html
@@ -96,12 +96,12 @@
   }
 
   for (var i =20; i <= 120; i++) {
-    dot(i, 380, "yellow")
-    dot(i, 480, "yellow")
+    dot(i, 380, "orange")
+    dot(i, 480, "orange")
   }
   for (var i = 380; i<= 480; i++) {
-    dot(20, i, "yelow")
-    dot(120, i, "yellow")
+    dot(20, i, "orange")
+    dot(120, i, "orange")
   }
 
   for (var i = 130; i <= 230; i++) {
@@ -125,8 +125,19 @@
     }
   }
 
+  for (var x = 0; x <= 500; x = x +  Math.PI / 1000) {
+    y =50 *  - Math.sin(0.05 * x) + 400
+    dot(x, y, "black")
+  } 
 
-
-
+  for (var x = 20; x <= 120; x += 0.5) {
+    for (var y = 20; y<= 120; y += 0.5) {
+      color ="#ff"  + "bb" + String(parseInt(255 / 170 * x)).toString(16)
+      dot(x, y, color)
+      dot(200 + 2 * x ,2 * y, color)
+      dot(110 + x, 0.27 * x+ y, color)
+      dot(200 + 0.5 * x - 0.87 * y, 200 + 0.87 * x + 0.85 * y,color)
+    }
+  }
 </script>
 </html>
