--- a/miao/paint.html
+++ b/miao/paint.html
@@ -132,12 +132,14 @@
 
   for (var x = 20; x <= 120; x += 0.5) {
     for (var y = 20; y<= 120; y += 0.5) {
-      color ="#ff"  + "bb" + String(parseInt(255 / 170 * x)).toString(16)
+      // color ="#ff"  + "bb" + String(parseInt(255 / 170 * x)).toString(16)
+      color = "rgb("+ ( x - 20 )* 255 / 100 +"," + ( y - 20) * 255 / 100 + "," + "255)"
       dot(x, y, color)
       dot(200 + 2 * x ,2 * y, color)
       dot(110 + x, 0.27 * x+ y, color)
       dot(200 + 0.5 * x - 0.87 * y, 200 + 0.87 * x + 0.85 * y,color)
     }
+
   }
 </script>
 </html>
