--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1111,7 +1111,7 @@
         n = w - 2
         res = res + c
         while (n--) {
-          res = res + "&nbsp;"
+          res = res + " "
         }
         res = res + c
         console.log(res)
