--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1135,9 +1135,9 @@
    } 
 
    if (flag == 1) {
-     return "YES"
+     return true
    }
-   else return "NO"
+   else return false
   }
 </script>
 
@@ -1162,7 +1162,7 @@
   function primes(N) {
     for (let n = 1; n <= N; n++)
     {
-      if(prime(n) == "YES") {
+      if(prime(n) == true) {
         console.log(n)
       }
     }
@@ -1199,9 +1199,9 @@
       }
     }
     if (sum == N) {
-      return "YES"
+      return true
     }
-    else return "NO"
+    else return false
   }
 </script>
 
@@ -1225,7 +1225,7 @@
   }
   function completeNumbers(N) {
     for (let i = 1; i <= N; i++) {
-      if(completeNumber(i) == "YES" && i != 1) {
+      if(completeNumber(i) == true && i != 1) {
         console.log(i)
       }
     }
@@ -1241,9 +1241,9 @@
       res = parseInt(res / 10)
     }
     if (sum == N) {
-    return "YES"
+    return true
     }
-    else return "NO"
+    else return false
   }
 </script>
 
@@ -1297,7 +1297,7 @@
 </script>
 
 <script id="weekday" >
-  function weekday(year, month, day) {
+  function weekday(year, month) {
     let sum = 0 
     for (let i = 1; i < year; i++) {
       if((year % 400 ==0) || (year % 4 == 0 && year % 100 !=0) ) {
@@ -1333,7 +1333,7 @@
         sum = sum + normalMonthDays[i]
       }
     }
-    sum = sum + day
+    sum = sum + 1
     let res = sum % 7
     console.log(res)
   }
